REDO-1363: fix tag wrapping

--- a/source/css/scss/app/pages/loan.scss
+++ b/source/css/scss/app/pages/loan.scss
@@ -82,8 +82,10 @@
 		margin-right: 1rem;
 		.selected-tags {
 			margin-bottom: 1rem;
-			span {
-				white-space: nowrap;
+			span:last-child {
+				.divider {
+					display: none;
+				}
 			}
 		}
 		.tag-toggler {
